{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 1401,
  "lineage": "4c6c0498-f57f-0219-0fd8-8a8cb3e91c6f",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:467091806900:loadbalancer/app/trading-platform-alb/e0effb8fba2f5179",
            "arn_suffix": "app/trading-platform-alb/e0effb8fba2f5179",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "trading-platform-alb-107808496.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:467091806900:loadbalancer/app/trading-platform-alb/e0effb8fba2f5179",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "trading-platform-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0f428fd39cfaad1a6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0920572bcf8f6bf6b"
              },
              {
                "subnet_id": "subnet-0f52dc4d926c70854"
              }
            ],
            "subnets": [
              "subnet-0920572bcf8f6bf6b",
              "subnet-0f52dc4d926c70854"
            ],
            "vpc_id": "vpc-0d47bf5f77d51f07d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:467091806900:loadbalancer/app/trading-platform-alb/e0effb8fba2f5179"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:467091806900:listener/app/trading-platform-alb/e0effb8fba2f5179/67d7b1475aed6d8e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:467091806900:targetgroup/trading-platform-api-tg/98dc8b6461e5c7ff",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:467091806900:listener/app/trading-platform-alb/e0effb8fba2f5179/67d7b1475aed6d8e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:467091806900:loadbalancer/app/trading-platform-alb/e0effb8fba2f5179",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:467091806900:listener/app/trading-platform-alb/e0effb8fba2f5179/67d7b1475aed6d8e"
          },
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.api",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:467091806900:targetgroup/trading-platform-api-tg/98dc8b6461e5c7ff",
            "arn_suffix": "targetgroup/trading-platform-api-tg/98dc8b6461e5c7ff",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/docs",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:467091806900:targetgroup/trading-platform-api-tg/98dc8b6461e5c7ff",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:467091806900:loadbalancer/app/trading-platform-alb/e0effb8fba2f5179"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "trading-platform-api-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:467091806900:targetgroup/trading-platform-api-tg/98dc8b6461e5c7ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:security-group/sg-0f428fd39cfaad1a6",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f428fd39cfaad1a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "trading-platform-alb-sg",
            "name_prefix": "",
            "owner_id": "467091806900",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "sg-0f428fd39cfaad1a6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_sg_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:security-group-rule/sgr-02e5efbcbd6a2b7d4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound",
            "from_port": null,
            "id": "sgr-02e5efbcbd6a2b7d4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0f428fd39cfaad1a6",
            "security_group_rule_id": "sgr-02e5efbcbd6a2b7d4",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "sgr-02e5efbcbd6a2b7d4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_sg_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:security-group-rule/sgr-0ef43788e370e6d5b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP from internet",
            "from_port": 80,
            "id": "sgr-0ef43788e370e6d5b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0f428fd39cfaad1a6",
            "security_group_rule_id": "sgr-0ef43788e370e6d5b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "sgr-0ef43788e370e6d5b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:security-group/sg-07847cb9f3e837a5c",
            "description": "EC2 instance security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07847cb9f3e837a5c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fe1698a59c6d8634"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "trading-platform-ec2-sg",
            "name_prefix": "",
            "owner_id": "467091806900",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "sg-07847cb9f3e837a5c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpcendpointec2ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:security-group/sg-0fe1698a59c6d8634",
            "description": "VPC Endpoint security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07847cb9f3e837a5c"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0fe1698a59c6d8634",
            "ingress": [],
            "name": "trading-platform-vpcendpointec2ssh-sg",
            "name_prefix": "",
            "owner_id": "467091806900",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "sg-0fe1698a59c6d8634",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_sg_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:security-group-rule/sgr-0bf3a7bda37ea9c77",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0bf3a7bda37ea9c77",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-07847cb9f3e837a5c",
            "security_group_rule_id": "sgr-0bf3a7bda37ea9c77",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "sgr-0bf3a7bda37ea9c77",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_security_group.ec2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpcendpointec2ssh_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:security-group-rule/sgr-0dda01d08a5ed21a5",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0dda01d08a5ed21a5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07847cb9f3e837a5c",
            "region": "us-east-1",
            "security_group_id": "sg-0fe1698a59c6d8634",
            "security_group_rule_id": "sgr-0dda01d08a5ed21a5",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "sgr-0dda01d08a5ed21a5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_security_group.ec2",
            "module.ec2.aws_security_group.vpcendpointec2ssh",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_sg_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:security-group-rule/sgr-020b8c83ba02b9098",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-020b8c83ba02b9098",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0fe1698a59c6d8634",
            "region": "us-east-1",
            "security_group_id": "sg-07847cb9f3e837a5c",
            "security_group_rule_id": "sgr-020b8c83ba02b9098",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "sgr-020b8c83ba02b9098",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_security_group.ec2",
            "module.ec2.aws_security_group.vpcendpointec2ssh",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:security-group/sg-0a3c4ece15aeff2d4",
            "description": "ECS services security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3c4ece15aeff2d4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "API from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f428fd39cfaad1a6"
                ],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "Internal ECS traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "trading-platform-ecs-sg",
            "name_prefix": "",
            "owner_id": "467091806900",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "sg-0a3c4ece15aeff2d4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ecs_sg_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:security-group-rule/sgr-0819ae376b374dbd1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound",
            "from_port": null,
            "id": "sgr-0819ae376b374dbd1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a3c4ece15aeff2d4",
            "security_group_rule_id": "sgr-0819ae376b374dbd1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "sgr-0819ae376b374dbd1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ecs.aws_security_group.ecs",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ecs_sg_alb_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:security-group-rule/sgr-0663621682aa4ef90",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "API from ALB",
            "from_port": 8000,
            "id": "sgr-0663621682aa4ef90",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0f428fd39cfaad1a6",
            "region": "us-east-1",
            "security_group_id": "sg-0a3c4ece15aeff2d4",
            "security_group_rule_id": "sgr-0663621682aa4ef90",
            "tags": null,
            "tags_all": {},
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "sgr-0663621682aa4ef90",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.ecs.aws_security_group.ecs",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ecs_sg_self_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:security-group-rule/sgr-07c21e1b4ecdd5371",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Internal ECS traffic",
            "from_port": null,
            "id": "sgr-07c21e1b4ecdd5371",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a3c4ece15aeff2d4",
            "region": "us-east-1",
            "security_group_id": "sg-0a3c4ece15aeff2d4",
            "security_group_rule_id": "sgr-07c21e1b4ecdd5371",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "sgr-07c21e1b4ecdd5371",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ecs.aws_security_group.ecs",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:security-group/sg-00a8c898c683529da",
            "description": "RDS Postgres security group",
            "egress": [],
            "id": "sg-00a8c898c683529da",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from temporary debug EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07847cb9f3e837a5c",
                  "sg-0a3c4ece15aeff2d4"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "trading-platform-rds-sg",
            "name_prefix": "",
            "owner_id": "467091806900",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "sg-00a8c898c683529da",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_sg_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:security-group-rule/sgr-0b7d08a672c0ea47d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Postgres from temporary debug EC2",
            "from_port": 5432,
            "id": "sgr-0b7d08a672c0ea47d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07847cb9f3e837a5c",
            "region": "us-east-1",
            "security_group_id": "sg-00a8c898c683529da",
            "security_group_rule_id": "sgr-0b7d08a672c0ea47d",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "sgr-0b7d08a672c0ea47d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_security_group.ec2",
            "module.ecs.aws_security_group.ecs",
            "module.rds.aws_security_group.rds",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:security-group-rule/sgr-011a612ffaa8a2b71",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Postgres from temporary debug EC2",
            "from_port": 5432,
            "id": "sgr-011a612ffaa8a2b71",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a3c4ece15aeff2d4",
            "region": "us-east-1",
            "security_group_id": "sg-00a8c898c683529da",
            "security_group_rule_id": "sgr-011a612ffaa8a2b71",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "sgr-011a612ffaa8a2b71",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_security_group.ec2",
            "module.ecs.aws_security_group.ecs",
            "module.rds.aws_security_group.rds",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a5a01590c9e7fcf",
            "arn": "arn:aws:ec2:us-east-1:467091806900:elastic-ip/eipalloc-03a5a01590c9e7fcf",
            "association_id": "eipassoc-007c269051ccaea15",
            "domain": "vpc",
            "id": "eipalloc-03a5a01590c9e7fcf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f5958316066d7e43",
            "private_dns": "ip-10-16-5-23.ec2.internal",
            "private_ip": "10.16.5.23",
            "public_dns": "ec2-34-193-48-36.compute-1.amazonaws.com",
            "public_ip": "34.193.48.36",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:internet-gateway/igw-0ba969aef5579b7e8",
            "id": "igw-0ba969aef5579b7e8",
            "owner_id": "467091806900",
            "region": "us-east-1",
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a5a01590c9e7fcf",
            "association_id": "eipassoc-007c269051ccaea15",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0edd78697e3eac83b",
            "network_interface_id": "eni-0f5958316066d7e43",
            "private_ip": "10.16.5.23",
            "public_ip": "34.193.48.36",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0920572bcf8f6bf6b",
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:route-table/rtb-015dbedd3f3095b51",
            "id": "rtb-015dbedd3f3095b51",
            "owner_id": "467091806900",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0edd78697e3eac83b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "rtb-015dbedd3f3095b51",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:route-table/rtb-0ff07bb0feb70a93b",
            "id": "rtb-0ff07bb0feb70a93b",
            "owner_id": "467091806900",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "rtb-0ff07bb0feb70a93b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:route-table/rtb-0490a3937cfde25e0",
            "id": "rtb-0490a3937cfde25e0",
            "owner_id": "467091806900",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba969aef5579b7e8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "rtb-0490a3937cfde25e0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c89f8b9efad1fc88",
            "region": "us-east-1",
            "route_table_id": "rtb-015dbedd3f3095b51",
            "subnet_id": "subnet-0099879702ac79331"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_app",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f2b5c2f59d1a41a",
            "region": "us-east-1",
            "route_table_id": "rtb-015dbedd3f3095b51",
            "subnet_id": "subnet-06af39556de5ca08d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_app",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9310b3e11c01860",
            "region": "us-east-1",
            "route_table_id": "rtb-0ff07bb0feb70a93b",
            "subnet_id": "subnet-084fb0767a875c017"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_db",
            "module.vpc.aws_subnet.private_db",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09427b91bc171acc3",
            "region": "us-east-1",
            "route_table_id": "rtb-0ff07bb0feb70a93b",
            "subnet_id": "subnet-0b59bfd512301e61f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_db",
            "module.vpc.aws_subnet.private_db",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093e2b5b6ea8a36eb",
            "region": "us-east-1",
            "route_table_id": "rtb-0490a3937cfde25e0",
            "subnet_id": "subnet-0920572bcf8f6bf6b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c91791d806a015df",
            "region": "us-east-1",
            "route_table_id": "rtb-0490a3937cfde25e0",
            "subnet_id": "subnet-0f52dc4d926c70854"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:subnet/subnet-0099879702ac79331",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0099879702ac79331",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467091806900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "subnet-0099879702ac79331",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:subnet/subnet-06af39556de5ca08d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.16.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06af39556de5ca08d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467091806900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "subnet-06af39556de5ca08d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:subnet/subnet-084fb0767a875c017",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084fb0767a875c017",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467091806900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "subnet-084fb0767a875c017",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:subnet/subnet-0b59bfd512301e61f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.16.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b59bfd512301e61f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467091806900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "subnet-0b59bfd512301e61f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:subnet/subnet-0920572bcf8f6bf6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0920572bcf8f6bf6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "467091806900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "subnet-0920572bcf8f6bf6b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:subnet/subnet-0f52dc4d926c70854",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.16.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f52dc4d926c70854",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "467091806900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0d47bf5f77d51f07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "subnet-0f52dc4d926c70854",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467091806900:vpc/vpc-0d47bf5f77d51f07d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/16",
            "default_network_acl_id": "acl-08880321e0d781e0e",
            "default_route_table_id": "rtb-0ea6baf425cd49e16",
            "default_security_group_id": "sg-07f0b2e05cd25d7b9",
            "dhcp_options_id": "dopt-0e8e1f9dc21ecf98e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d47bf5f77d51f07d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea6baf425cd49e16",
            "owner_id": "467091806900",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "467091806900",
            "id": "vpc-0d47bf5f77d51f07d",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}